# fisim

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
fisi/: constants.py
fisim/: constants.py  flows.py  taxes.py
notebooks/: EY.explore-financial-planning.ipynb  explore-financial-planning.ipynb  sp.ipynb  thoughts.ipynb  walkthrough.ipynb
notebooks/personal/: explore-financial-planning.ipynb
spear/: __init__.py  assets.py  base.py  constants.py  events.py  flows.py  model.py  taxes.py  utilities.py
tests/: conftest.py  test_assets.py  test_base.py  test_events.py  test_flows.py  test_growth.py  test_model.py  test_utilities.py
xfisi/: flows.py  taxes.py
